[package]
name = "wavetool"
version = "0.1.0"
authors = ["Taylor Hornby <taylor@defuse.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
hound = "3.4.0"
rustfft = "3.0.0"
primes = "0.2.3"
float-cmp = "0.6.0"